welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:4: error: type green is not a member of object java.awt.Color
                 if(getCouleurSol():Color.green){
                                          ^